samples/_failures_safe/1761609154_f5f2db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_758c7652.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_758c7652.c:141:9: error: expected expression at end of input
  141 |         case
      |         ^~~~
./samples/SAFE/__tmp_758c7652.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_758c7652.c:141:9: error: expected declaration or statement at end of input
